--- a/public/css/argon.css
+++ b/public/css/argon.css
@@ -17923,7 +17923,7 @@ a.btn-icon-only
 {
     padding: 2.5rem 0; 
 
-    background: #f7fafc;
+    background: white;
 }
 .footer .col-footer .heading
 {
@@ -19010,7 +19010,9 @@ textarea[resize='horizontal']
 }
 .navbar-horizontal .navbar-brand img
 {
-    height: 30px;
+    height: 140px;
+    margin-left: 15px;
+    margin-top: 17px;
 }
 
 .navbar-horizontal .navbar-dark .navbar-brand
@@ -19148,7 +19150,7 @@ textarea[resize='horizontal']
 .navbar-vertical .navbar-brand > img
 {
     max-width: 100%;
-    max-height: 2rem;
+    max-height: 40px;
 }
 @media (min-width: 768px)
 {
@@ -19543,7 +19545,7 @@ textarea[resize='horizontal']
     .navbar-vertical.navbar-expand-md.fixed-left
     {
         left: 0;
-
+        background-color: #5e72e4 !important;
         border-width: 0 1px 0 0;
     }
     .navbar-vertical.navbar-expand-md.fixed-right
@@ -19561,7 +19563,7 @@ textarea[resize='horizontal']
         margin-left: -1.5rem;
         padding-right: 1.5rem; 
         padding-left: 1.5rem;
-
+        background-color: white;
         flex: 1 1;
         align-items: stretch;
     }
@@ -19609,7 +19611,7 @@ textarea[resize='horizontal']
     }
     .navbar-vertical.navbar-expand-md .navbar-brand-img
     {
-        max-height: 2.5rem;
+        max-height: 80px;
     }
     .navbar-vertical.navbar-expand-md .navbar-user
     {
@@ -20961,7 +20963,7 @@ textarea[resize='horizontal']
 
 p
 {
-    font-size: 1rem;
+    font-size: 13px;
     font-weight: 300;
     line-height: 1.7;
 }
